[flake8]
ignore = E501, W504
exclude = .git,__pycache__,docs

[options]
zip_safe = False
install_requires =
    numpy
include_package_data = True

[options.extras_require]
test =
    setuptools
    flake8
    pytest
    pytest-cov
examples =
    matplotlib
    casadi
    typed-argument-parser
    pin-meshcat-utils @ git+https://gitlab.inria.fr/wjallet/pin-meshcat-utils
