[flake8]
ignore = E501, W504
exclude = .git,__pycache__,docs
per-file-ignores =
    python/proxddp/__init__.py:F401,F403

[options]
zip_safe = False
install_requires =
    numpy
include_package_data = True

[options.extras_require]
test =
    setuptools
    flake8
    pytest
    pytest-cov
examples =
    matplotlib
    casadi
    typed-argument-parser
    pin-meshcat-utils @ git+https://gitlab.inria.fr/wjallet/pin-meshcat-utils

[tool:pytest]
